--- a/Johnny Nash/web.config
+++ b/Johnny Nash/web.config
@@ -12,5 +12,8 @@
                 <add value="default.aspx" />
             </files>
         </defaultDocument>
+        <staticContent>
+            <mimeMap fileExtension=".json" mimeType="application/json" />
+        </staticContent>
     </system.webServer>
 </configuration>
